the theorems in DERIV_intros assumes composition with an additional
function and matches a variable to the derivative, which has to be
solved by the simplifier.  Hence (auto intro!: DERIV_intros) computes
the derivative of most elementary terms.

* Maclauren.DERIV_tac and Maclauren.deriv_tac was removed, they are
replaced by: (auto intro!: DERIV_intros).  INCOMPATIBILITY.


*** ML ***

* Renamed NamedThmsFun to Named_Thms.  INCOMPATIBILITY.

* Eliminated old Attrib.add_attributes, Method.add_methods and related
cominators for "args".  INCOMPATIBILITY, need to use simplified
Attrib/Method.setup introduced in Isabelle2009.


*** System ***

* Discontinued support for Poly/ML 4.x versions.

* Removed "compress" option from isabelle-process and isabelle usedir;
this is always enabled.



New in Isabelle2009 (April 2009)
--------------------------------

*** General ***

* Simplified main Isabelle executables, with less surprises on
case-insensitive file-systems (such as Mac OS).

  - The main Isabelle tool wrapper is now called "isabelle" instead of
    "isatool."

  - The former "isabelle" alias for "isabelle-process" has been
    removed (should rarely occur to regular users).

  - The former "isabelle-interface" and its alias "Isabelle" have been
    removed (interfaces are now regular Isabelle tools).

Within scripts and make files, the Isabelle environment variables
ISABELLE_TOOL and ISABELLE_PROCESS replace old ISATOOL and ISABELLE,
respectively.  (The latter are still available as legacy feature.)

The old isabelle-interface wrapper could react in confusing ways if
the interface was uninstalled or changed otherwise.  Individual
interface tool configuration is now more explicit, see also the
Isabelle system manual.  In particular, Proof General is now available
via "isabelle emacs".

INCOMPATIBILITY, need to adapt derivative scripts.  Users may need to
purge installed copies of Isabelle executables and re-run "isabelle
install -p ...", or use symlinks.
